# teclado-helena

./: .gitignore  Cargo.toml  DEVELOP.md  README.md  build.bat  build.rs  gendoc.bat  pom.xml  run.bat
.github/workflows/: maven.yml  rust.yml
assets/: Package.wxs
client/: app.js  index.html  package-lock.json  package.json  pom.xml  webpack.config.js
client/default_instance/: index.html  index.js  style.css
client/src/: index.html  index.js
client/src/styles/: style.css
client/ui/: app.css  app.js  index.html  package-lock.json  package.json  webpack.config.js
client/ui/src/: index.html  index.js  manifest.json
client/ui/src/styles/: style.css
client/ui/styles/: style.css
client/welcome/: index.html  index.js  style.css
docs/: index.html
docs/server/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/server/implementors/rust_embed/: trait.RustEmbed.js
docs/server/src/teclado_helena/: actions.rs.html  main.rs.html  server.rs.html  window.rs.html
docs/server/teclado_helena/: all.html  fn.get_ip_url.html  fn.main.html  index.html  sidebar-items.js
docs/server/teclado_helena/actions/: enum.ButtonState.html  enum.InputAction.html  enum.MouseButton.html  enum.ScrollDirection.html  fn.deserialize_action.html  fn.get_key.html  fn.process_action.html  fn.process_key_press.html  fn.process_mouse_click.html  fn.process_mouse_move.html  fn.process_scroll.html  index.html  sidebar-items.js
docs/server/teclado_helena/server/: fn.serve.html  index.html  sidebar-items.js
docs/server/teclado_helena/window/: fn.create_hbitmap_from_vec.html  fn.create_window.html  fn.generate_qr_code.html  (+4 more)
server/: README.md  pom.xml
server/jpackage/: AppxManifest.xml  CreateShortcuts.ps1  MsiInstallerStrings_pt_BR.wxl  Resources.pri  Resources.pri.xml  Resources.scale-125.pri  Resources.scale-150.pri  Resources.scale-200.pri  Resources.scale-400.pri  StartScript.ps1  StartingScriptWrapper.ps1  config.json  main.wxs
server/jpackage/certificate/: THL.pfx
src/: actions.rs  main.rs  server.rs  window.rs
src/server/: static_server.rs  websocket.rs
(+107 files in other folders)
