[package]
name = "teclado-helena"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
futures = "0.3.30"
mime_guess = "2.0.4"
rust-embed = { version = "8.2.0", features = ["axum-ex"] }
tokio = "1.35.1"
qrcode-generator = "4.1.9"
local-ip-address = "0.5.6"
image = { version = "0.24.7", features = ["bmp"] }
qrcode = "0.13.0"
enigo = "0.1.3"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
single-instance = "0.3.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
winres = "0.1.12"